[gd_scene load_steps=4 format=3 uid="uid://bu4u3x2sl56hv"]

[ext_resource type="Script" uid="uid://dmt6627e4fl7p" path="res://Character.gd" id="1_gau8p"]
[ext_resource type="PackedScene" uid="uid://b1cqb8tcwtqpl" path="res://Scenes/Areas/damage_reciever.tscn" id="2_14xnq"]
[ext_resource type="PackedScene" uid="uid://cc4flu47j04d0" path="res://Scenes/Areas/damage_emitter.tscn" id="3_62gcc"]

[node name="BaseCharacter" type="CharacterBody2D"]
script = ExtResource("1_gau8p")

[node name="Shadow" type="Sprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CharacterSprite" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DamageEmitter" parent="." instance=ExtResource("3_62gcc")]
monitoring = true

[node name="DamageReciever" parent="." instance=ExtResource("2_14xnq")]

[editable path="DamageEmitter"]
[editable path="DamageReciever"]
